bk_ida/gccida/c2/build_real_from_int_cst
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_real_from_int_cst/src/tree.c:1184:12: error: expected expression
*( _OWORD *)v6.r = v8; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_real_from_int_cst/src/tree.c:1184:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)v6.r = v8; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_real_from_int_cst/src/tree.c:1192:12: error: expected expression
*( _OWORD *)&node->block.vars = *( _OWORD *)v6.r; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_real_from_int_cst/src/tree.c:1192:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&node->block.vars = *( _OWORD *)v6.r; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_real_from_int_cst/src/tree.c:1192:44: error: expected expression
*( _OWORD *)&node->block.vars = *( _OWORD *)v6.r; 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_real_from_int_cst/src/tree.c:1192:36: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&node->block.vars = *( _OWORD *)v6.r; 
                                   ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_real_from_int_cst/src/obj/tree.o] Error 1
